# deo-llm-reframing

./: .env.example  .gitignore  LICENSE  README.md  export_for_r.py  generate_figures.py  pyproject.toml  run_cross_score.py  run_deo.py  run_experiment.py  run_full.py  run_stats.py  verify_stats.R
.claude/commands/: reframe-long.md  reframe.md
paper/: method.md  stats_results.md  study1_data.csv  study2_data.csv
paper/tables/: table8_analysis1_summary.csv  table8_analysis1_summary.md  table9_analysis2_pairwise.csv  table9_analysis2_pairwise.md
results/llama/: budget_allocation.json  climate_policy.json  declining_scores.json  deo_report.md  expert_overengineering.json  expired_patent.json  hiring_paradox.json  loss_frame_hospital.json  merger_decision.json  productivity_paradox.json  report.md  scale_assumption.json  shipping_containers.json  sunk_cost_rail.json  water_jar.json
results/llama/raw/: acquisition_confidence.json  brain_drain.json  broken_healthcare.json  budget_allocation.json  churn_pattern.json  climate_policy.json  climate_target_anchor.json  custody_dispute.json  dead_end_career.json  declining_scores.json  deo_acquisition_confidence.json  deo_brain_drain.json  deo_broken_healthcare.json  deo_churn_pattern.json  deo_climate_target_anchor.json  deo_custody_dispute.json  deo_dead_end_career.json  (+82 more)
results/llama4scout/: deo_report.md  report.md
results/qwen/: deo_report.md  report.md
src/reframing_ai/: config.py  cross_scorer.py  deo_problems.py  deo_report.py  deo_runner.py  deo_scorer.py  problems.py  prompts.py  report.py  runner.py  scorer.py
(+195 files in other folders)
